# TAPIR

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  install.sh  package.yaml  tapir.cabal
.claude/: settings.local.json
app/: Main.hs
config/: config.yaml
languages/: spanish.yaml
src/Tapir/: Core.hs  Types.hs
src/Tapir/Client/: Anki.hs  LLM.hs
src/Tapir/Client/Anki/: Error.hs
src/Tapir/Client/LLM/: Base.hs  Error.hs  Ollama.hs  OpenAI.hs  OpenRouter.hs  Request.hs  Response.hs  SSE.hs  Tools.hs  Types.hs
src/Tapir/Config/: Defaults.hs  Error.hs  Loader.hs  Types.hs
src/Tapir/Core/: Constants.hs  Error.hs  Logging.hs  Parse.hs  Selection.hs
src/Tapir/Db/: Error.hs  Instances.hs  Repository.hs  Schema.hs
src/Tapir/Model/: Anki.hs  Chat.hs  Error.hs
src/Tapir/Service/: Card.hs  LLM.hs  Message.hs  Session.hs
src/Tapir/Types/: Language.hs  Mode.hs  Provider.hs  Response.hs
src/Tapir/UI/: App.hs  Attrs.hs  Chat.hs  Command.hs  Draw.hs  Event.hs  Input.hs  Modals.hs  StatusBar.hs  Structured.hs  Types.hs  Widgets.hs
src/Tapir/UI/Event/: Card.hs  Custom.hs  Main.hs  Message.hs  Modal.hs  Session.hs  Settings.hs
test/: Spec.hs
test/Tapir/Client/LLM/: OllamaSpec.hs  OpenAISpec.hs  RequestSpec.hs  ResponseSpec.hs  ToolsSpec.hs  TypesSpec.hs
test/Tapir/Config/: LoaderSpec.hs
test/Tapir/Core/: ParseSpec.hs  SelectionSpec.hs
test/Tapir/Db/: RepositorySpec.hs
test/Tapir/Service/: CardSpec.hs
test/Tapir/Types/: ProviderSpec.hs  ResponseSpec.hs
